--- a/themes/Acetolog/layout/includes/footer.njk
+++ b/themes/Acetolog/layout/includes/footer.njk
@@ -11,13 +11,13 @@
     {% endif %}
 
     <div class="al_index_footer_item al_index_footer_extra">
-        Created By 
+         主题色支持
         <a href="https://github.com/iGuan7u/Acetolog">AcetoLog</a>
-         · Power By 
+         · 框架支持
         <a href="https://hexo.io/">Hexo</a>
     </div>
 
     <div class="al_index_footer_item al_index_footer_extra_right">
-        All Right Reserved
+        版权所有
     </div>
 </div>
